# pc-lab5

./: .gitignore  README.md
client/: .gitignore  Command.cs  Constants.cs  Debug.cs  GetStatusCommand.cs  IndexCommand.cs  Matrix.cs  Program.cs  SendDataCommand.cs  StartCalculationCommand.cs  State.cs  TypeChecker.cs  TypeConverter.cs  main.go
client/command/: command.go
client/constants/: constants.go
client/matrix/: matrix.go
client/matrix/mtype/: mtype.go
client/message/: message.go
client/message/kind/: kind.go
client/message/mtype/: mtype.go
client/status/: status.go
server/: Cargo.toml
server/src/: job.rs  main.rs  matrix_type.rs  request.rs  response.rs  status.rs  thread.rs
test/: test.py
testing/: .gitignore  client.csv  go.mod  main.go  server.csv
