[package]
name = "server"
version = "0.1.0"
edition = "2021"

[package.metadata]
test-timeout = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
sysinfo = "0.29.0"
once_cell = "1.17.0"
futures = "0.3.0"
tokio = { version = "1.28.1", features = ["full", "tracing"] }
rayon = "1.3.0"
tokio-rayon = "2.1.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
bytes = "1.4.0"
rand = "0.8.0"
hex = "0.4.0"
